Require the WebSocket Transport make an /abort request to abort
- Avoids timeouts being mistakenly registered as aborts
- Unifies abort logic for all transports

#2195 #1231

#2500

--- a/src/Microsoft.AspNet.SignalR.Client.Silverlight5/Microsoft.AspNet.SignalR.Client.Silverlight5.csproj
+++ b/src/Microsoft.AspNet.SignalR.Client.Silverlight5/Microsoft.AspNet.SignalR.Client.Silverlight5.csproj
@@ -118,6 +118,9 @@
       <Link>Transports\TransportHelper.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\Microsoft.AspNet.SignalR.Client\Infrastructure\TransportAbortHandler.cs">
+      <Link>Infrastructure\TransportAbortHandler.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\Common\CommonAssemblyInfo.cs">
