--- a/src/Microsoft.AspNet.SignalR.Client.WP8/Microsoft.AspNet.SignalR.Client.WP8.csproj
+++ b/src/Microsoft.AspNet.SignalR.Client.WP8/Microsoft.AspNet.SignalR.Client.WP8.csproj
@@ -194,6 +194,9 @@
     <Compile Include="..\Microsoft.AspNet.SignalR.Client\Infrastructure\ExceptionHelper.cs">
       <Link>Infrastructure\ExceptionHelper.cs</Link>
     </Compile>
+    <Compile Include="..\Microsoft.AspNet.SignalR.Client\Infrastructure\TransportAbortHandler.cs">
+      <Link>Infrastructure\TransportAbortHandler.cs</Link>
+    </Compile>
     <Compile Include="..\Microsoft.AspNet.SignalR.Client\Infrastructure\StreamExtensions.cs">
       <Link>Infrastructure\StreamExtensions.cs</Link>
     </Compile>
