--- a/src/Microsoft.AspNet.SignalR.Client.WinRT/Microsoft.AspNet.SignalR.Client.WinRT.csproj
+++ b/src/Microsoft.AspNet.SignalR.Client.WinRT/Microsoft.AspNet.SignalR.Client.WinRT.csproj
@@ -123,6 +123,9 @@
     <Compile Include="..\Microsoft.AspNet.SignalR.Client\Http\IResponseExtensions.cs">
       <Link>Http\IResponseExtensions.cs</Link>
     </Compile>
+    <Compile Include="..\Microsoft.AspNet.SignalR.Client\Infrastructure\TransportAbortHandler.cs">
+      <Link>Infrastructure\TransportAbortHandler.cs</Link>
+    </Compile>
     <Compile Include="..\Microsoft.AspNet.SignalR.Client\Resources.Designer.cs">
       <Link>Resources.Designer.cs</Link>
     </Compile>
